--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aqua",
+  "name": "aqua-client",
   "version": "1.0.0",
   "description": "A command handler built on top of Eris inspired by discord.js-commando.",
   "main": "index.js",
